--- a/index.html
+++ b/index.html
@@ -1,27 +1,102 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="HTML, CSS, Grid" />
-    <meta name="author" content="Volkov Andrey" />
-    <meta name="author" content="Павел Бодренков">
-    <link rel="stylesheet" href="./pages/index.css" />
-    <title>kuda-mockup</title>
-</head>
-<body>
-    <div class="page">
-        <header class="header"></header>
-        <main class="content">
-            <section class="lead"></section>
-            <section class="places"></section>
 
-            <!-- Паша это твои секции -->
-            <section class="intro"></section>
-            <section class="form"></section>
-            <section class="video"></section>
-        </main>
-        <footer class="footer"></footer>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords" content="HTML, CSS, Grid" />
+  <meta name="author" content="Volkov Andrey" />
+  <meta name="author" content="Павел Бодренков" />
+  <link rel="stylesheet" href="./pages/index.css" />
+  <title>kuda-mockup</title>
+</head>
+
+<body>
+  <div class="page">
+    <header class="header">
+      <ul class="header__list">
+        <li class="header__list-item">
+          <a href="#" class="header__link">Мечты</a>
+        </li>
+        <li class="header__list-item">
+          <a href="#" class="header__link">Ожидания</a>
+        </li>
+        <li class="header__list-item">
+          <a href="#" class="header__link">Реальность</a>
+        </li>
+      </ul>
+      <span><a href="#" class="header__link">Пожаловаться</a></span>
+
+    </header>
+    <main class="content">
+      <section class="lead">
+        <article>
+          <p class="lead__subtitle">куда я поеду</p>
+          <h1 class="lead__title">
+            Куда я поеду сразу, как можно будет куда-то поехать
+          </h1>
+        </article>
+        <figure class="lead__picture">
+          <img src="./images/intro-image.jpeg" alt="вид из самолета на солнечные облака" class="lead__image" />
+      </section>
+      <section class="places">
+        <article class="place">
+          <img src="./images/places-forest.jpeg" alt="Водопад в лесу" class="place__image" />
+          <div class="place__text">
+            <h2 class="place__title">Поеду в лес</h2>
+            <div class="place__paragrafs">
+              <p class="place__paragraf">
+                Лес — экологическая система, биоценоз, в которой главной жизненной формой являются деревья.
+              </p>
+              <p class="place__paragraf">Лес — составная часть природы, понятие «лес» можно рассматривать на разных
+                уровнях. В глобальном масштабе — это часть биосферы, в локальном — это может быть насаждение. Леса
+                занимают около трети площади суши.
+              </p>
+            </div>
+          </div>
+        </article>
+        <article class="place">
+          <div class="place__text">
+            <h2 class="place__title">Поеду в горы</h2>
+            <div class="place__paragrafs">
+              <p class="place__paragraf">
+                Горные системы занимают 64 % поверхности Азии, 36 % — Северной Америки, 25 % — Европы, 22 % — Южной
+                Америки, 17 % — Австралии и 3 % — Африки. В целом 24 % земной поверхности приходится на горы. 10 % всех
+                людей живёт на территории гор. В горах берёт своё начало большинство рек Земли.
+              </p>
+            </div>
+
+          </div>
+          <img src="./images/places-mountains.jpeg" alt="Горные вершины" class="place__image" />
+
+        </article>
+        <article class="place">
+          <img src="./images/places-black-sea.jpeg" alt="Черное море" class="place__image" />
+          <div class="place__text">
+            <h2 class="place__title">Поеду на Чёрное море</h2>
+            <div class="place__paragrafs">
+              <p class="place__paragraf">
+                Я уплыву туда, где ни разу я не был, туда, где никто раньше не был. Никто и никогда раньше не был, я
+                уплыву. Я позову тебя смотреть на синее небо и пить по капле синее небо, и падать в это синее небо, я
+                позову.
+              </p>
+              <p class="place__paragraf">
+                Уеду я на Чёрное-Чёрное море, на Чёрное-Чёрное море, на Чёрное-Чёрное море уеду я. Уеду я на
+                Чёрное-Чёрное море, на Чёрное-Чёрное море, на Чёрное-Чёрное море.
+              </p>
+              <p class="place__paragraf">Уеду я.</p>
+            </div>
+          </div>
+        </article>
+      </section>
+
+      <!-- Паша это твои секции -->
+      <section class="intro"></section>
+      <section class="form"></section>
+      <section class="video"></section>
+    </main>
+    <footer class="footer"></footer>
+  </div>
 </body>
+
 </html>
