--- a/index.html
+++ b/index.html
@@ -91,12 +91,57 @@
       </section>
 
       <!-- Паша это твои секции -->
-      <section class="intro"></section>
-      <section class="form"></section>
-      <section class="video"></section>
-    </main>
-    <footer class="footer"></footer>
-  </div>
+      <section class="intro">
+        <div class="intro__content">
+          <article class="intro__text">
+            <p class="intro__subtitle">Люди</p>
+            <h2 class="intro__title">Что говорят и говорили люди о путешествиях</h2>
+          </article>
+            <ul class="intro__list">
+                <li class="intro__item">
+                    <h3 class="intro__list-title">Иван  Бунин</h3>
+                    <p class="intro__list-subtitle">Человека делают счастливым три вещи: любовь, интересная работа и возможность путешествовать.</p>
+                </li>
+                <li class="intro__item">
+                    <h3 class="intro__list-title">Альбер  Камю</h3>
+                    <p class="intro__list-subtitle">Путешествие как самая великая и серьезная наука помогает нам вновь обрести себя.</p>
+                </li>
+                <li class="intro__item">
+                    <h3 class="intro__list-title">Норвежская  Пословица</h3>
+                    <p class="intro__list-subtitle">Лишь тот, кто странствует, открывает новые пути.</p>
+                </li>
+                <li class="intro__item">
+                    <h3 class="intro__list-title">Мария  Захарова</h3>
+                    <p class="intro__list-subtitle">В принципе, зарубежная поездка - это серьезнейшее, ответственнейшее и очень рискованное предприятие.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="form">
+        <div class="form__conteiner">
+            <div class="form__content">
+             <h2 class="form__title">Так куда же я поеду?</h2>
+             <form>
+               <fieldset class="form__fieldset">
+                 <input class="form__inpur-text" type="text" name="text" placeholder="Я поеду ...">
+                 <textarea  class="form__textarea" placeholder="Потому что я ..." name="text"></textarea>
+                </fieldset>
+               <fieldset class="form__fieldset-button">
+                 <input class="form__button" type="submit" value="Поехали уже куда-нибудь!" name="button">
+               </fieldset>
+             </form>
+            </div>
+            <img  src="images/airport-schedule.jpg" class="form__photo" alt="Табло аэропорта">
+        </div>
+    </section>
+    <section class="video">
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/JGNiMutYBm4" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
+</main>
+<footer class="footer">
+    <p class="footer__title">&#169; 2O2O</p>
+</footer>
+</div>
 </body>
 
 </html>
