--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
           </article>
             <ul class="intro__list">
                 <li class="intro__item">
-                    <h3 class="intro__list-title">Иван  Бунин</h3>
+                    <h3 class="intro__list-title">Иван&nbsp;&nbsp;&nbsp;Бунин</h3>
                     <p class="intro__list-subtitle">Человека делают счастливым три вещи: любовь, интересная работа и возможность путешествовать.</p>
                 </li>
                 <li class="intro__item">
-                    <h3 class="intro__list-title">Альбер  Камю</h3>
+                    <h3 class="intro__list-title">Альбер&nbsp;&nbsp;&nbsp;Камю</h3>
                     <p class="intro__list-subtitle">Путешествие как самая великая и серьезная наука помогает нам вновь обрести себя.</p>
                 </li>
                 <li class="intro__item">
-                    <h3 class="intro__list-title">Норвежская  Пословица</h3>
+                    <h3 class="intro__list-title">Норвежская&nbsp;&nbsp;&nbsp;Пословица</h3>
                     <p class="intro__list-subtitle">Лишь тот, кто странствует, открывает новые пути.</p>
                 </li>
                 <li class="intro__item">
-                    <h3 class="intro__list-title">Мария  Захарова</h3>
+                    <h3 class="intro__list-title">Мария&nbsp;&nbsp;&nbsp;Захарова</h3>
                     <p class="intro__list-subtitle">В принципе, зарубежная поездка - это серьезнейшее, ответственнейшее и очень рискованное предприятие.</p>
                 </li>
             </ul>
@@ -139,7 +139,7 @@
     </section>
 </main>
 <footer class="footer">
-    <p class="footer__title">&#169; 2O2O</p>
+    <p class="footer__title">&#169;&nbsp;2O2O</p>
 </footer>
 </div>
 </body>
