Pavel:подогнал размеры, доработал video

--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
           </article>
             <ul class="intro__list">
                 <li class="intro__item">
-                    <h3 class="intro__list-title">Иван&nbsp;&nbsp;&nbsp;Бунин</h3>
+                    <h3 class="intro__list-title">Иван&nbsp;&nbsp;Бунин</h3>
                     <p class="intro__list-subtitle">Человека делают счастливым три вещи: любовь, интересная работа и возможность путешествовать.</p>
                 </li>
                 <li class="intro__item">
-                    <h3 class="intro__list-title">Альбер&nbsp;&nbsp;&nbsp;Камю</h3>
+                    <h3 class="intro__list-title">Альбер&nbsp;&nbsp;Камю</h3>
                     <p class="intro__list-subtitle">Путешествие как самая великая и серьезная наука помогает нам вновь обрести себя.</p>
                 </li>
                 <li class="intro__item">
-                    <h3 class="intro__list-title">Норвежская&nbsp;&nbsp;&nbsp;Пословица</h3>
+                    <h3 class="intro__list-title">Норвежская&nbsp;&nbsp;Пословица</h3>
                     <p class="intro__list-subtitle">Лишь тот, кто странствует, открывает новые пути.</p>
                 </li>
                 <li class="intro__item">
-                    <h3 class="intro__list-title">Мария&nbsp;&nbsp;&nbsp;Захарова</h3>
+                    <h3 class="intro__list-title">Мария&nbsp;&nbsp;Захарова</h3>
                     <p class="intro__list-subtitle">В принципе, зарубежная поездка - это серьезнейшее, ответственнейшее и очень рискованное предприятие.</p>
                 </li>
             </ul>
