--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
 <body>
   <div class="page">
     <header class="header">
-      <ul class="header__list">
-        <li class="header__list-item">
-          <a href="#" class="header__link">Мечты</a>
-        </li>
-        <li class="header__list-item">
-          <a href="#" class="header__link">Ожидания</a>
-        </li>
-        <li class="header__list-item">
-          <a href="#" class="header__link">Реальность</a>
-        </li>
-      </ul>
-      <span><a href="#" class="header__link">Пожаловаться</a></span>
-
+      <nav>
+        <ul class="header__list">
+          <li class="header__list-item">
+            <a href="#" class="header__link">Мечты</a>
+          </li>
+          <li class="header__list-item">
+            <a href="#" class="header__link">Ожидания</a>
+          </li>
+          <li class="header__list-item">
+            <a href="#" class="header__link">Реальность</a>
+          </li>
+        </ul>
+        <span><a href="#" class="header__link">Пожаловаться</a></span>
+      </nav>
     </header>
     <main class="content">
       <section class="lead">
