fix: text - size

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <nav>
+      <nav class="header__menu">
         <ul class="header__list">
           <li class="header__list-item">
             <a href="#" class="header__link">Мечты</a>
@@ -31,7 +31,7 @@
     </header>
     <main class="content">
       <section class="lead">
-        <article>
+        <article class="lead__text">
           <p class="lead__subtitle">куда я поеду</p>
           <h1 class="lead__title">
             Куда я поеду сразу, как можно будет куда-то поехать
